--- a/meson.build
+++ b/meson.build
@@ -41,6 +41,7 @@ executable(
     install : true
 )
 
+subdir('po')
 subdir('data')
 
 meson.add_install_script('meson/post_install.py', join_paths(get_option('prefix'), get_option('datadir')))
