--- a/data/meson.build
+++ b/data/meson.build
@@ -1,18 +1,15 @@
-icon_sizes = ['16', '24', '32', '48', '64', '128']
- 
-foreach i : icon_sizes
-    install_data(
-        join_paths('icons', i, meson.project_name() + '.svg'),
-        install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', i + 'x' + i, 'apps')
-    )
-endforeach
-
-foreach i : icon_sizes
-    install_data(
-        join_paths('icons', i, meson.project_name() + '.svg'),
-        install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', i + 'x' + i + '@2', 'apps')
-    )
-endforeach
+install_data(
+        join_paths('icons', meson.project_name() + '.svg'),
+        install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '128x128', 'apps')
+)
+install_data(
+        join_paths('icons', meson.project_name() + '.svg'),
+        install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '128x128' + '@2', 'apps')
+)
+install_data(
+        join_paths('icons', meson.project_name() + '.svg'),
+        install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '128x128' + '@3', 'apps')
+)
 
 install_data(
     meson.project_name() + '.gschema.xml',
