--- a/meson.build
+++ b/meson.build
@@ -16,6 +16,7 @@ sources = files(
     'src/Application.vala',
     'src/MainWindow.vala',
     'src/Services/DialogUtils.vala',
+    'src/Services/Utils.vala',
     'src/Widgets/HeaderBar.vala',
     'src/Widgets/WelcomeView.vala',
 )
