--- a/meson.build
+++ b/meson.build
@@ -11,41 +11,28 @@ add_project_arguments(
     '-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()),
     language: 'c'
 )
+i18n = import('i18n')
 
-sources = files(
-    'src/Application.vala',
-    'src/MainWindow.vala',
-    'src/Services/DialogUtils.vala',
-    'src/Services/Utils.vala',
-    'src/Widgets/HeaderBar.vala',
-    'src/Widgets/WelcomeView.vala',
-)
+datadir = join_paths(get_option('prefix'), get_option('datadir'))
+bindir = join_paths(get_option('prefix'), get_option('bindir'))
+localedir = join_paths(get_option('prefix'), get_option('localedir'))
 
-asresources = gnome.compile_resources(
-    'as-resources', join_paths('data', 'com.github.lainsce.icon-previewer.gresource.xml'),
-    source_dir: 'data',
-    c_name: 'as'
-)
+application_id = 'com.github.lainsce.icon-previewer'
+profile = ''
 
-cc = meson.get_compiler('c')
-m_dep = cc.find_library('m', required: true)
-dependencies = [
-    dependency('gtk+-3.0'),
-    dependency('libhandy-1'),
-    dependency('granite'),
-    m_dep,
-]
+conf = configuration_data()
+conf.set_quoted('G_LOG_DOMAIN', application_id)
+conf.set_quoted('PACKAGE_VERSION', meson.project_version())
+conf.set_quoted('GETTEXT_PACKAGE', meson.project_name())
+conf.set_quoted('LOCALE_DIR', localedir)
+conf.set_quoted('APP_ID', application_id)
+conf.set_quoted('PROFILE', profile)
 
-# Let's define our executable
-executable(
-    meson.project_name(),
-    sources,
-    asresources,
-    dependencies: dependencies,
-    install : true
-)
+add_global_arguments('-DGETTEXT_PACKAGE="@0@"'.format (meson.project_name()), language: 'c')
+add_global_arguments('-DG_LOG_DOMAIN="@0@"'.format (application_id), language: 'c')
 
-subdir('po')
 subdir('data')
+subdir('po')
+subdir('src')
 
 meson.add_install_script('meson/post_install.py', join_paths(get_option('prefix'), get_option('datadir')))
